<resources>
    <string name="app_name">Babble</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_icon">email icon</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_icon">password icon</string>
    <string name="Retype_your_password">Retype your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_inst">A link will be sent to your email to reset password. Please check your email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="search_user">Find user...</string>
    <!--Logout alert dialog-->
    <string name="dialog_message">Are you sure you want to log out?</string>
    <string name="dialog_title">Log Out</string>
</resources>
