<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABD1F1"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="#1F537C"
        android:textSize="40sp"
        android:textStyle="bold" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/emailrpET"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangle_field"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:outlineProvider="bounds"
            android:paddingVertical="15dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/email_icon" />
    </RelativeLayout>

    <TextView
        android:layout_width="330dp"
        android:layout_height="86dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/reset_inst"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#375C78"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

</LinearLayout>