<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoChat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/chat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#69047A"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangle_field"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:outlineProvider="bounds"
            android:paddingVertical="15dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/email_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangle_field"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingVertical="15dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_baseline_password_24"
            android:contentDescription="@string/password_icon" />
    </RelativeLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#69047A"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="#4E4B4B"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signUpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sign_up"
            android:textColor="#69047A"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#69047A"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>